# scrapper-service

./: .gitignore  .gitlab-ci.yml  Dockerfile  Makefile  README.md  docker-compose.http.yml  docker-compose.kafka.yml  docker-compose.yml  gpaphana_business.json  graphana_red.json  observability.md  prometheus.yml  pyproject.toml
agent_service/: Dockerfile  config.yml  pyproject.toml
agent_service/src/: config.py  grouper.py  logger_config.py  main.py  prioritizer.py  processor.py  retry_decorator.py  summarizer.py
agent_service/src/dependencies/: consumer_factory.py  grouper_factory.py  kafka_factory.py  prioritizer_factory.py  processor_factory.py  producer_factory.py  summarizer_factory.py
agent_service/src/filters/: author_filter.py  base_filter.py  length.filter.py  length_filter.py  words_filter.py
agent_service/src/kafka/: consumer.py  handle_update.py  producer.py
agent_service/src/models/: dto.py  link.processed-updates.avsc  link.raw-updates.avsc
agent_service/src/secrets/: .env.example
agent_service/tests/: conftest.py  test_factory.py  test_filters.py  test_processor.py  test_summarizer.py
bot/: .gitignore  .gitlab-ci.yml  Dockerfile  Makefile  README.md  config.yml  pyproject.toml
bot/src/: bot_instance.py  config.py  exceptions.py  logger_config.py  main.py  metrics.py
bot/src/api/: updates.py
bot/src/client/: base_client.py  scrapper_client.py
bot/src/constants/: messages.py
bot/src/dependencies/: client_factory.py
bot/src/models/: schemas.py
bot/src/routes/: basic_commands.py  commands.py  list.py  states.py  track.py  untrack.py
bot/src/secrets/: .env.example
bot/src/updates/: api.py  kafka_consumer.py  update_handler.py
bot/tests/: conftest.py  test_api.py  test_contract.py  test_handle.py  test_internet.py  test_kafka_consumer.py  test_list.py  test_track.py  test_untrack.py
k8s/: namespace.yaml  secret_exmple.yaml
k8s/postgres/: configmap.yaml  service.yaml  statefulset.yaml
k8s/valkey/: deployment.yaml  service.yaml
scrapper/: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  config.yml  pyproject.toml
scrapper/src/: cache.py  cache_manager.py  config.py  exceptions.py  logger_config.py  main.py  metrics.py  outbox_processor.py  retry_decorator.py  scheduler.py
scrapper/src/api/: links.py  tg_chat.py
scrapper/src/clients/: base_client.py  github_client.py  retry_decorator.py  stackoverflow_client.py
scrapper/src/dependencies/: cache_factory.py  client_factory.py  notifier_factory.py  repository_factory.py  service_factory.py
scrapper/src/migrations/: env.py
scrapper/src/migrations/versions/: 1633711d1a9b_outbox.py  662967a77aa3_001_init.py
scrapper/src/models/: link.raw-updates.avsc  link_update.avsc
scrapper/src/models/dto/: schemas.py
scrapper/src/models/orm/: schemas.py
scrapper/src/notifier/: base_notifier.py  bot_notifier.py  http_notifier.py  kafka_notifier.py
scrapper/src/repository/: base_repository.py  orm_repository.py  raw_repository.py
scrapper/src/secrets/: .env.example
scrapper/src/services/: base_service.py  link_service.py
scrapper/src/validators/: validators.py
scrapper/tests/: conftest.py  test_cache_manager.py  test_contract.py  test_factory.py  test_github_client.py  test_kafka_producer.py  test_link_service.py  test_notifier.py  test_scheduler.py  test_stackoverflow_client.py
src/: main.py
tests/: TestLoad.jmx  client_side_caching.csv  docker-compose.test.yml  seed_data.py  test_e2e.py  with_cache.csv  without_cache.csv
