[tool.poetry]
name = "scrapper-monorepo"
version = "0.1.0"
description = ""
package-mode = false
authors = ["i.korotaev"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
fastapi = "^0.135.1"
pydantic = "^2.12.5"
pydantic-settings = "^2.13.1"
httpx = "^0.28.1"
uvicorn = "^0.41.0"
asyncpg = "^0.31.0"
sqlalchemy = "^2.0.48"
alembic = "^1.18.4"
aiogram = "^3.25.0"
pytest-asyncio = "^1.3.0"
requests = "^2.32.5"
python-json-logger = "^4.1.0"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
isort = "^5.13.2"
ruff = "^0.6.1"
pytest = "*"
pytest-cov = "*"
pytest-deadfixtures = "*"
pytest-mock = "*"
pytest-repeat = "*"
pytest-asyncio = "*"
mypy = "^1.19.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
# Расскомментируйте следующую строку, если используете Pydantic
# plugins = ['pydantic.mypy']
allow_redefinition = true
ignore_missing_imports = true
no_implicit_optional = true
strict_equality = true
warn_unused_ignores = true
exclude = "^(.*/)?test_[\\w]*\\.py$|conftest\\.py|tests"
