[project]
name = "agent-service"
version = "0.1.0"
description = ""
authors = [
    {name = "KoIvRo",email = "korot4ev29@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "confluent-kafka (>=2.14.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
